--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/netinfo": "^11.1.1",
     "aws-amplify": "^6.0.5",
+    "core-js": "^3.34.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-get-random-values": "^1.10.0",
