--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.34.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.10.0",
     "react-native-sqlite-storage": "^6.0.1"
   },
